welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var color:Boolean
    avance()
    if (!estFaceMur){avance()}
   else if (getCouleurSol()==Color.green){avance}
    
    
    
    
    
    
    // Write your code here
}        
